syntax = "proto3";

package object_tracking;

service LocationServer {

    rpc Register (ClientInfo) returns (ServerInfo) {
    }
    rpc ReportLocation (stream Location) returns (Empty) {
    }

}

message ClientInfo {
    string info = 1;
}

message ServerInfo {
    string info = 1;
}

message Location {
    int32 x = 1;
    int32 y = 2;
    int32 width = 3;
    int32 height = 4;
}

message Empty {

}

